--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack --watch --mode=development",
     "build": "webpack --mode=production",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "types": "./dist/index.d.ts",
   "peerDependencies": {
